--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -1,13 +1,20 @@
-* {background-color: BlanchedAlmond;}
+* {
+  background-color: BlanchedAlmond;
+}
+
 
 .center{
   text-align: center;
 }
 
+
 h1{
   font-size: 3rem;
   color: brown;
+  font-family: monospace;
 }
+
+
 
 #c{
   color: red;
@@ -46,6 +53,10 @@ h1{
 }
 
 
+#hoffman{
+  font-;
+}
+
 #chemistry{
   font-family: cursive;
 }
@@ -56,16 +67,28 @@ h1{
 
 h2{
   color: brown;
+  font-family: cursive;
 }
 
 h3{
   color: brown;
+  font-family: cursive;
 }
 
 h4{
   color: brown;
+  font-family: cursive;
 }
 
 .italic{
   font-style: italic;
+}
+
+p {
+  font-family: cursive;
+}
+
+a{
+  font-family: cursive;
+  color: brown;
 }
