--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -1,5 +1,7 @@
 * {
-  background-color: BlanchedAlmond;
+  background-color: #7df2ff;
+  letter-spacing: -1px;
+  word-spacing: 1px;
 }
 
 
@@ -10,8 +12,8 @@
 
 h1{
   font-size: 3rem;
-  color: brown;
-  font-family: monospace;
+  color: ;
+  font-family: 'Playfair Display', serif;
 }
 
 
@@ -29,7 +31,7 @@ h1{
 }
 
 #m{
-  color: green;
+  color: #389100;
 }
 
 #i{
@@ -54,7 +56,7 @@ h1{
 
 
 #hoffman{
-  font-;
+  font:-;
 }
 
 #chemistry{
@@ -66,18 +68,18 @@ h1{
 }
 
 h2{
-  color: brown;
-  font-family: cursive;
+  color: #389100;
+  font-family: 'Fauna One', serif;
 }
 
 h3{
-  color: brown;
-  font-family: cursive;
+  color: #389100;
+  font-family: 'Fauna One', serif;
 }
 
 h4{
-  color: brown;
-  font-family: cursive;
+  color: ;
+  font-family: 'Fauna One', serif;
 }
 
 .italic{
@@ -85,10 +87,11 @@ h4{
 }
 
 p {
-  font-family: cursive;
+  font-family: 'Fauna One', serif;
 }
 
 a{
-  font-family: cursive;
-  color: brown;
+  font-family: 'Playfair Display', serif;
+  color: #389100;
+  font-weight: bolder;
 }
